--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Fiction'
+- GITenberg
 title: 'Young Mr. Barter''s Repentance
 
   From "Schwartz" by David Christie Murray'
